Data format operations(json, csv and xml) available. Ip address v4 is added.
