# models/schemaModel.js
@@ -6,11 +6,17 @@ var mongoose = require('mongoose');
 var schemaSchema = mongoose.Schema({
     id: String,
     name: String,
-    ownerID: mongoose.Schema.ObjectId,
+    owner: {
+        type: mongoose.Schema.ObjectId,
+        ref: 'User'
+    },
     count: Number,
     fields: [{
         name: String,
-        dataTypeId: mongoose.Schema.ObjectId
+        dataType: {
+            type: mongoose.Schema.ObjectId,
+            ref: 'DataType'
+        }
     }],
     fileFormat: String
 });
